<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">J~Net Screen Recorder</string>
    <string name="settings_title">Settings</string>
    <string name="bubble_service_label">Screen Recorder Bubble</string>
    <string name="recorder_service_label">Screen Recorder</string>
    <string name="notification_channel_name">Screen Recorder</string>
    <string name="notification_channel_desc">Screen and audio recording status</string>
    <string name="notification_title_recording">Recording in progress</string>
    <string name="notification_text_recording">Tap to open the recorder</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="show_bubble">Show quick-access bubble</string>
    <string name="hide_bubble">Hide quick-access bubble</string>
    <string name="open_settings">Settings</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="enable_overlay">Enable overlay permission</string>
    <string name="enable_overlay_desc">The quick-access bubble needs overlay permission to float above other apps.</string>
    <string name="granted">Granted</string>
    <string name="not_granted">Not granted</string>
    <string name="permission_required">Permission required</string>
    <string name="audio_permission_desc">Microphone permission is required to record sound along with the screen.</string>
    <string name="notification_permission_desc">Notification permission is required to show recording status.</string>
    <string name="tile_label">Screen Recorder</string>
    <string name="enable_tile">Enable Quick Settings tile</string>
    <string name="enable_tile_desc">Add a Start/Stop tile to the Quick Settings panel (works without overlay permission, OFF by default).</string>
</resources>
